--- a/views/koverage.handlebars
+++ b/views/koverage.handlebars
@@ -1,106 +1,29 @@
 <div class="koverageDiv">
     <div class="koverageBanner">
 
-    </div>
-    <div class="container centered">
-        <div class="row"> <br>
-            <div class="centered">
-                <hr>
-                <h2 class="boldL ">GET YOUR SCRIPT OR BOOK PRODUCED</h2> <br>
-            </div>
-            <hr>
-            <div class="col m2 s12"></div>
-            <div class="col m8 s12 ">
-                <h5 class="boldL">Engage directly with the industry through our coverage programs <br> <br>
-                    Apply to receive industry-level notes and a 30-minute call with us to strengthen your script. GET A
-                    CHANCE to be considered <br> by Vilpa Films for production.
-
-                </h5>
-                <p class="boldL" style="color: blue;">*By applying, you state that you have read and agreed to the terms
-                    and conditions of this program*</p>
-                <a class="waves-effect waves-light btn-large #263238 blue-grey darken-4"
-                    onclick="location.href='/terms-koverage';">See the terms and conditions first</a>
-
-            </div>
-            <div class="col m2 s12"></div>
-        </div>
-    </div>
+    </div> <br> <br>
+    
     <div class="container centered titleSiguenos">
-        <div class="row">
-            <div class="col s12 m4">
-                <div class="card #37474f blue-grey darken-3">
-                    <div class="card-image">
-                        <img src="/assets/images/basicC.jpg">
-                    </div>
-                    <div class="card-content " style="color: white;">
-                        <h5>Short film scripts, written in English, up to 30 pages. <br> <br> Submitted exclusively for
-                            feedback, and includes a 30-minute call with the team.
-                            <hr> * Each submission fee covers one script only *
-                            <hr> £140.00 GBP
-                        </h5>
-
-                    </div>
-                    <div class="card-action ">
-                        <h5> <a href="https://buy.stripe.com/28E8wP3SH93ia6Q7vK1Nu0e">Start submission</a></h5>
-                    </div>
-                </div>
-            </div>
-            <div class="col s12 m4">
-                <div class="card #37474f blue-grey darken-3">
-                    <div class="card-image">
-                        <img src="/assets/images/womenC.jpg">
-                    </div>
-                    <div class="card-content " style="color: white;">
-                        <h5>Short film scripts in English, up to 30 pages. <br><br> Exclusively for women writers.
-                            Feedback, production consideration and a 30 minute call with the team.
-                            <hr> * Each submission fee covers one script only *
-                            <hr> £190.00 GBP
-                        </h5>
-
-                    </div>
-                    <div class="card-action ">
-                        <h5> <a href="https://buy.stripe.com/28E7sLgFt4N2a6QeYc1Nu0f">Start submission</a></h5>
-                    </div>
-                </div>
-            </div>
-            <div class="col s12 m4">
-                <div class="card #37474f blue-grey darken-3">
-                    <div class="card-image">
-                        <img src="/assets/images/premiumC.jpg">
-                    </div>
-                    <div class="card-content " style="color: white;">
-                        <h5>Open to the general public. <br> <br> Includes feedback, a chance for production
-                            consideration and a
-                            30 minute call with the team.
-                            <hr> * Each submission fee covers one script only *
-                            <hr> £190.00 GBP
-                        </h5>
-
-                    </div>
-                    <div class="card-action ">
-                        <h5> <a href="https://buy.stripe.com/00w28r60P1AQ6UE7vK1Nu0g">Start submission</a></h5>
-                    </div>
-                </div>
-            </div>
-        </div>
         <div class="row">
             <div class="col s12 m3"></div>
             <div class="col s12 m6">
-                <div class="card #37474f blue-grey darken-3">
+                <div class="card " style="background-color: #073051;">
                     <div class="card-image">
-                        <img src="/assets/images/booksKoverage.jpg">
+                        <img src="/assets/images/filmFreewayKoverage.png">
                     </div>
                     <div class="card-content " style="color: white;">
-                        <h5>Open to the general public. <br> <br> Includes feedback, a chance for production
-                            consideration and a
-                            30 minute call with the team.
-                            <hr> * Each submission fee covers one book only * Accepting books in Spanish and English
-                            <hr> £240.00 GBP
+                        <h5>Engage directly with the industry through our KOVERAGE
+                            program.
+                            <hr> Apply to receive professional notes and a 30-minute consultation with Vilpa Films. <br>
+                            <br> Unlock the opportunity to be selected for production in our 2026 slate
                         </h5>
 
                     </div>
                     <div class="card-action ">
-                        <h5> <a href="https://buy.stripe.com/eVq14ncpdbbq2Eo8zO1Nu0h">Start submission</a></h5>
+                        <a href="https://filmfreeway.com/festivals/91402?utm_campaign=Vilpa+Films+KOVERAGE&utm_medium=External&utm_source=Submission+Button"
+                            target="_blank" title="Click to submit on FilmFreeway"><img
+                                src="https://public-assets.filmfreeway.com/submission_buttons/v2/med_submission_btn@2x-sky.png"
+                                title="Click to submit on FilmFreeway" width="263" height="102"></a>
                     </div>
                 </div>
             </div>
@@ -113,11 +36,18 @@
             </p> <br>
         </div>
         <div class="row">
+            <p class="boldL" style="color: blue;">*By applying, you state that you have read and agreed to the terms
+                and conditions of this program*</p>
+            <a class="waves-effect waves-light btn-large #263238 blue-grey darken-4"
+                onclick="location.href='/terms-koverage';">See the terms and conditions first</a>
             <p class="boldL" style="color: red;">
                 Disclaimer:
-                Please note that submitting your script or book does not guarantee or confirm production by Vilpa Films. Only
-                short scripts in English are accepted at this time and for books, we accept English and Spanish. Submissions
-                are final and should only be made if you believe your script or book has the quality necessary to be considered.
+                Please note that submitting your script does not guarantee or confirm production by Vilpa Films.
+                Only
+                short scripts in English are accepted at this time.
+                Submissions
+                are final and should only be made if you believe your script or book has the quality necessary to be
+                considered.
                 We encourage you to carefully review your materials before submitting to ensure your project is
                 presented at its best.
             </p>
