--- a/views/terms-koverage.handlebars
+++ b/views/terms-koverage.handlebars
@@ -25,37 +25,18 @@
         <div class="row">
             <h5 class="boldL">2. Eligibility and Categories</h5>
             <p>
-                Applicants must only submit to the category that corresponds to them: <br>
             <ul>
-                <li><i class="material-icons" style="font-size: 13px;">send</i> <span class="boldl">Basic:</span> Open
-                    to the general public.
-                    This category includes script coverage
-                    services only and <span class="boldL">does not provide eligibility for production
-                        consideration.</span></li>
-                <li><i class="material-icons" style="font-size: 13px;">send</i> <span class="boldl">Premium:</span>
-                    Open to the general public. This category includes coverage services plus the opportunity to be
-                    considered for production/adaptation.</li>
-                <li><i class="material-icons" style="font-size: 13px;">send</i> <span class="boldl">Women in
-                        Film:</span>
-                    Exclusively open to women. This category includes coverage services plus the opportunity to be
-                    considered for production/adaptation.</li>
-                <li><i class="material-icons" style="font-size: 13px;">send</i> <span class="boldl">Books
-                        Koverage:</span>
-                    Open exclusively to published authors. This category includes coverage services tailored to the
-                    publishing and film markets, with the chance for selected projects to be considered for adaptation
-                    and/or production as a short film.</li>
+                <li><i class="material-icons" style="font-size: 13px;">send</i> <span class="boldl">Open to short film
+                        scripts only (live action, documentary, animation, or experimental). Feature-length scripts, web
+                        pilots, or TV series are not accepted.</span></li>
+                <li><i class="material-icons" style="font-size: 13px;">send</i> <span class="boldl">Scripts must be
+                        written in English.</li>
+                <li><i class="material-icons" style="font-size: 13px;">send</i> <span class="boldl">Applicants must be
+                        18 years or older at the time of submission.</li>
+                <li><i class="material-icons" style="font-size: 13px;">send</i> <span class="boldl">All submissions must
+                        be the applicant’s original work and fully owned by the writer/creator.</li>
             </ul> <br>
-            Scripts must meet the following criteria: <br> <br>
-            <ul>
-                <li><i class="material-icons" style="font-size: 13px;">send</i> Written <span class="boldL">only in
-                        English.</span></li>
-                <li><i class="material-icons" style="font-size: 13px;">send</i> Must be <span class="boldL">short films
-                        only</span> for Basic, Premium, and Women in Film (feature-length scripts are not accepted).
-                </li>
-                <li><i class="material-icons" style="font-size: 13px;">send</i> For <span class="boldL">Books
-                        Koverage,</span> only published books are eligible.</li>
 
-            </ul>
             </p>
         </div>
         <hr>
@@ -63,15 +44,15 @@
             <h5 class="boldL">3. Submission Deadlines</h5>
             <ul>
                 <li><i class="material-icons" style="font-size: 13px;">send</i> All selected applicants must submit
-                    their final scripts <span class="boldL">no later than October 10, 2026.</span></li>
+                    their final scripts <span class="boldL">no later than April 3, 2026.</span></li>
                 <li><i class="material-icons" style="font-size: 13px;">send</i> The results of the winning submissions
-                    will be announced on <span class="boldL">December 24, 2026.</span></li>
+                    will be announced on <span class="boldL">June 3, 2026.</span></li>
             </ul>
         </div>
         <hr>
         <div class="row">
             <h5 class="boldL">4. Coverage Services Provided</h5>
-            <p>All categories (Basic, Premium, Women in Film, Books Koverage) include the following services:
+            <p>Each submission will receive:
             <ul>
                 <li><i class="material-icons" style="font-size: 13px;">send</i> A <span class="boldL">3-page
                         industry-level coverage report</span> analyzing project viability and market potential.</li>
@@ -84,11 +65,10 @@
         </div>
         <hr>
         <div class="row">
-            <h5 class="boldL">5. Production Consideration (ONLY Premium & Women in Film programs)</h5>
+            <h5 class="boldL">5. Production Consideration </h5>
             <p>
             <ul>
-                <li><i class="material-icons" style="font-size: 13px;">send</i> Selected projects in the <span
-                        class="boldL">Premium, Women in Film, and Books Koverage</span> categories will receive an offer
+                <li><i class="material-icons" style="font-size: 13px;">send</i> Selected projects will receive an offer
                     for potential production and/or adaptation.</li>
                 <li><i class="material-icons" style="font-size: 13px;">send</i> However, Vilpa Films is <span
                         class="boldL">not obligated</span> to produce the script if no agreement is reached with the
@@ -104,7 +84,7 @@
             <h5 class="boldL">6. Development Process</h5>
             <p>
             <ul>
-                <li><i class="material-icons" style="font-size: 13px;">send</i> Writers/authors receiving <span
+                <li><i class="material-icons" style="font-size: 13px;">send</i> Writers receiving <span
                         class="boldL">notes for improvement</span> as part of the development process must revise and
                     improve their script as a condition of moving forward in production consideration.</li>
                 <li><i class="material-icons" style="font-size: 13px;">send</i> Failure to comply may result in the
@@ -146,8 +126,10 @@
         </div>
         <div class="row">
             <h5>I have read and understood the Terms & Conditions</h5> <br>
-            <a class="waves-effect waves-light btn-large #263238 blue-grey darken-4"
-                onclick="location.href='/koverage';">Go to the coverage programs</a>
+            <a href="https://filmfreeway.com/festivals/91402?utm_campaign=Vilpa+Films+KOVERAGE&utm_medium=External&utm_source=Submission+Button"
+                target="_blank" title="Click to submit on FilmFreeway"><img
+                    src="https://public-assets.filmfreeway.com/submission_buttons/v2/med_submission_btn@2x-sky.png"
+                    title="Click to submit on FilmFreeway" width="263" height="102"></a>
 
         </div> <br>
     </div>
