--- a/views/broadkst.handlebars
+++ b/views/broadkst.handlebars
@@ -2,7 +2,7 @@
     <div class="broadkstBanner">
 
     </div>
-    <div class="container centered">
+    <div class="container ">
         <div class="row">
             <div class="centered">
                 <h2>Submissions are open for short films</h2>
@@ -10,21 +10,46 @@
             <div class="col m2 s12"></div>
             <div class="col m8 s12 ">
                 <h5 class="boldL">We open the door for filmmakers. Join our international catalog! Home to oscar-winning
-                    titles. <br> <br>
-                    Are you ready to see your story alongside some of the most celebrated titles in cinema? Submit your
-                    film.
+                    titles.
 
                 </h5>
-                <p class="boldL" style="color: blue;">*By applying, you state that you have read and agreed to the terms
-                    and conditions of this program*</p>
-                <a class="waves-effect waves-light btn-large #263238 blue-grey darken-4"
-                    onclick="location.href='/terms-broadkst';">See the terms and conditions first</a>
+                <div class="row">
+                    <p style="font-style: italic; font-size: 1.5rem"> Submit your shortfilm and if you get
+                        selected you will be part of our catalogue for streaming in the Middle East,
+                        North Africa and the UK. That means being part the variety of the catalogue that includes also
+                        Oscar and Cannes winning titles. <br> <br>
+
+                        To move forward, please send the following details to business@vilpafilms.com: <br> <hr>
+
+                    <ol style="font-style: italic; font-size: 1.5rem">
+                        <li>Synopsis of your film (100–200 words)</li>
+                        <li>Contact email of the responsible person, name and phone (this last is optional)</li>
+                        <li>Screening link (Vimeo/YouTube private or screener link) + password (if needed)</li>
+                    </ol> <hr>
+                    <p style="font-style: italic; font-size: 1.5rem">
+                        Once we receive this, our team will review your film and they will update you with the result. Looking forward to your submission!
+
+                        Best,
+                        Alejandro Vilpa
+                        Founder & Director – Vilpa Films
+                    </p>
+
+
+                    </p> <br>
+                </div>
+               
             </div>
             <div class="col m2 s12"></div>
         </div>
+        <div class="row centered">
+             <p class="boldL" style="color: blue;">*By applying, you state that you have read and agreed to the terms
+                    and conditions of this program*</p>
+                <a class=" centered waves-effect waves-light btn-large #263238 blue-grey darken-4"
+                    onclick="location.href='/terms-broadkst';">See the terms and conditions first</a>
+        </div>
     </div>
     <div class="container centered titleSiguenos">
-        <div class="row">
+        {{!-- <div class="row">
             <div class="col s12 m6">
                 <div class="card #37474f blue-grey darken-3">
                     <div class="card-image">
@@ -61,8 +86,8 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="row">
+        </div> --}}
+        {{!-- <div class="row">
             <div class="col s12 m6">
                 <div class="card #37474f blue-grey darken-3">
                     <div class="card-image">
@@ -98,12 +123,8 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="row">
-            <p style="font-style: italic; font-size: 1.5rem">You can also reach us through e-mail:
-                business@vilpafilms.com
-            </p> <br>
-        </div>
+        </div> --}}
+
         <div class="row">
             <p class="boldL" style="color: red;">
                 Disclaimer:
