--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -39,7 +39,7 @@
                 </div>
                 <div class="col s12 m4">
                     <div class="card pointer serviceCard">
-                        <div class="card-image" onclick="location.href='/koverage';">
+                        <div class="card-image" onclick="location.href='https://filmfreeway.com/VilpaFilmsKOVERAGE';">
                             <img src="/assets/images/koverage.jpg">
 
 
