--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -5,9 +5,11 @@
     <div class="aboutDiv">
         <div class="row">
             <br>
-            <h5 class="titleVilpa"> <span style="font-weight: bolder; font-size: 3rem;">Vilpa Films</span> is a dynamic
-                independent production company dedicated to supporting projects with strong production potential and to
-                distributing a highly curated catalog of Oscar, BAFTA, and Cannes award-winning films. <br> <br>
+            <h5 class="titleVilpa"> <span style="font-weight: bolder; font-size: 3rem;">Vilpa Films</span> is an
+                international film production and distribution company featuring award-winning short films from <span
+                    style="font-weight: bolder; font-size: 2rem;">Cannes and the Oscars</span>. We also specialize in
+                crafting cinematic trailers and teasers for marketing campaigns.
+                <br>
 
 
             </h5>
@@ -16,9 +18,73 @@
         </div>
     </div>
     <div class="divProducts">
+        <br><br>
         <div class="container">
             <div class="row">
-                <h1 class="centered">OUR SERVICES</h1>
+                <div class="col s12 m6">
+                    <img class="crowsWebHome" src="/assets/images/crowsWebHome.jpg" alt="All the Crows in the World">
+                    <img class="crowsWebHome" src="/assets/images/loveBlindFooterHome.jpg"
+                        alt="All the Crows in the World">
+
+                </div>
+                <div class="col s12 m6">
+                    <div style="padding:176.67% 0 0 0;position:relative;"><iframe
+                            src="https://player.vimeo.com/video/1132877145?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479&amp;autoplay=1&amp;muted=1&amp;loop=1"
+                            frameborder="0"
+                            allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share"
+                            referrerpolicy="strict-origin-when-cross-origin"
+                            style="position:absolute;top:0;left:0;width:100%;height:100%;"
+                            title="The Undertone of David Jansen - Teaser"></iframe></div>
+                    <script src="https://player.vimeo.com/api/player.js"></script>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col s12 m6">
+                    <div style="padding:177.78% 0 0 0;position:relative;"><iframe
+                            src="https://player.vimeo.com/video/1132879136?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479&amp;autoplay=1&amp;loop=1"
+                            frameborder="0"
+                            allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share"
+                            referrerpolicy="strict-origin-when-cross-origin"
+                            style="position:absolute;top:0;left:0;width:100%;height:100%;"
+                            title="Waves 98 - Trailer"></iframe></div>
+                    <script src="https://player.vimeo.com/api/player.js"></script>
+                </div>
+                <div class="col s12 m6">
+                    <img class="crowsWebHome" src="/assets/images/poofWebHome.jpg" alt="All the Crows in the World">
+                    <img class="crowsWebHome" src="/assets/images/yardBirdFooterHome.jpg"
+                        alt="All the Crows in the World">
+
+                </div>
+            </div>
+            <div class="row">
+                <div class="col s12 m12">
+                    <img class="nocturneFooterBanner" src="/assets/images/nocturneFooterBanner.jpg"
+                        alt="Nocturne in Black">
+                </div>
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="row">
+                <div class="col s12 m4">
+                    <span style="font-weight: bolder; font-size: 2rem;">CINEMATIC TRAILERS <br> FOR MARKETING
+                        CAMPAIGNS</span> <br><br>
+                </div>
+                <div class="col s12 m8">
+                    <div style="padding:56.6% 0 0 0;position:relative;"><iframe
+                            src="https://player.vimeo.com/video/1132880479?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479&amp;autoplay=1&amp;muted=1&amp;loop=1"
+                            frameborder="0"
+                            allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share"
+                            referrerpolicy="strict-origin-when-cross-origin"
+                            style="position:absolute;top:0;left:0;width:100%;height:100%;"
+                            title="All the Crows in the world"></iframe></div>
+                    <script src="https://player.vimeo.com/api/player.js"></script>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+
                 <div class="col s12 m4">
                     <div class="card pointer serviceCard">
                         <div class="card-image" onclick="location.href='/broadkst';">
@@ -50,76 +116,4 @@
             </div>
         </div>
     </div>
-    <div class="awardsDiv ">
-        <div class="container">
-            <div class="row">
-                <div class="col s12 m6 imageCannes"></div>
-                <div class="col s12 m6 ">
-                    <h2 class="sforzandoTitlesHome">The undertone of David Jansen</h2>
-                    <h5 class="sforzandoTitlesHome">Our most recent project, tells the story of a determined musician
-                        that wins the role of leading
-                        violinist in a dance production of a famous piece, but his obsession with perfection drags him
-                        into a dark spiral, threatening to drive him insane.</h5>
-                    <h5 class="sforzandoTitlesHome boldL" style="color: gray;">Promotion on Billboards for Cannes Film
-                        Festival 2025 — Expected release: 2026</h5>
-                    <br>
-                    <img class="responsive-img sforzandoTitlesHome" src="/assets/images/1.jpg" alt="">
-                    <br> <br>
-                    <img class="responsive-img sforzandoTitlesHome" src="/assets/images/5.jpg" alt="">
-
-
-                </div>
-            </div>
-            <div class="row">
-
-                <div class="col s12 m4">
-                    <img class="responsive-img" src="/assets/images/4.jpg" alt="">
-                </div>
-                <div class="col s12 m4">
-                    <img class="responsive-img" src="/assets/images/3.jpg" alt="">
-                </div>
-                <div class="col s12 m4">
-                    <img class="responsive-img" src="/assets/images/2.jpg" alt="">
-                </div>
-            </div>
-
-        </div>
-        <div class="container">
-            <div class="row">
-                <h1>Films:</h1>
-                <br>
-                <div class="col s12 m4">
-                    <div class="card ">
-                        <div class="card-image" onclick="location.href='#';">
-                            <img src="/assets/images/nocturnePost.jpg">
-                        </div>
-
-                    </div>
-                </div>
-                <div class="col s12 m4">
-                    <div class="card ">
-                        <div class="card-image" onclick="location.href='#';">
-                            <img src="/assets/images/allCrowns.jpg">
-
-
-                        </div>
-
-                    </div>
-                </div>
-                <div class="col s12 m4">
-                    <div class="card ">
-                        <div class="card-image" onclick="location.href='#';">
-                            <img src="/assets/images/davidjansenpost.jpg">
-
-
-                        </div>
-
-                    </div>
-                </div>
-            </div>
-        </div>
-
-
-    </div>
-
 </div>
