--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -4,7 +4,7 @@
 
             <h3>Let's keep in touch!</h3>
             <p style="font-style: italic; font-size: 1.5rem">You can also reach me through e-mail:
-                alecvipa@gmail.com
+                business@vilpafilms.com
             </p>
 
         </div>
