--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,7 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="">
-    <meta name="description" content="Home of Oscar-winning films and bold independent voices, Vilpa Films is a production company that brings visionary stories to global festivals and audiences">
+    <meta name="description"
+        content="Home of Oscar-winning films and bold independent voices, Vilpa Films is a production company that brings visionary stories to global festivals and audiences">
     <meta name="keywords"
         content="Oscar-winning films, independent filmmakers, film production company, international film festivals, Cannes films, Berlín films, curated cinema, global distribution, award-winning films, film development, film pre-production, film coverage, script coverage, emerging filmmakers, film industry UK, film industry MENA">
     <link rel="shortcut icon" href="assets/images/logoTab.png">
@@ -159,66 +160,65 @@
             <li><a href="/kreativa-chronicles" class="black-text">Kreativa Chronicles</a></li>
             <li class="divider"></li>
         </ul>
-        <nav class="white navDiv fonts" role="navigation">
-            <div class="nav-wrapper container">
-                <a id="logo-container" href="/" class="brand-logo "><img src="/assets/images/logo1.png" alt="logoIdm"
-                        class="imageLogo"></a>
-                <ul class="right hide-on-med-and-down navUl">
-                    <li><a href="/" class="navItems navBarD">Home</a></li>
-                    <!-- Dropdown Trigger -->
-                    {{!-- <li><a class="dropdown-trigger black-text" href="#!" data-target="dropdown1">Film<i
-                                class="material-icons right">arrow_drop_down</i></a></li>
-                    <li><a class="dropdown-trigger black-text" href="#!" data-target="dropdown2">TV<i
-                                class="material-icons right">arrow_drop_down</i></a></li> --}}
-                    <li><a href="/contact" class="navItems navBarD">Contact</a></li>
-                    <li><a href="/privacy" class="navItems navBarD">Privacy policy</a></li>
-                    <li><a href="#" class="navItems" target="_blank"><i class="fab fa-facebook"></i></a></li>
-                    <li><a href="#" class="navItems" target="_blank"><i class="fab fa-instagram"></i></a></li>
-                    {{!-- <li><a href="/privacidad" class="navItems"><i class="fab fa-whatsapp-square"></i></a></li>
-                    --}}
-                </ul>
+        <div class="navbar-fixed">
+            <nav class="white navDiv fonts" role="navigation">
+                <div class="nav-wrapper container">
+                    <a id="logo-container" href="/" class="brand-logo "><img src="/assets/images/logo1.png"
+                            alt="logoIdm" class="imageLogo"></a>
+                    <ul class="right hide-on-med-and-down navUl">
+                        <li><a href="/" class="navItems navBarD">Home</a></li>
+                        <!-- Dropdown Trigger -->
+                        {{!-- <li><a class="dropdown-trigger black-text" href="#!" data-target="dropdown1">Film<i
+                                    class="material-icons right">arrow_drop_down</i></a></li>
+                        <li><a class="dropdown-trigger black-text" href="#!" data-target="dropdown2">TV<i
+                                    class="material-icons right">arrow_drop_down</i></a></li> --}}
+                        <li><a href="/contact" class="navItems navBarD">Contact</a></li>
+                        <li><a href="/privacy" class="navItems navBarD">Privacy policy</a></li>
+                        {{!-- <li><a href="#" class="navItems" target="_blank"><i class="fab fa-facebook"></i></a></li> --}}
+                        <li><a href="https://www.instagram.com/vilpafilms/" class="navItems" target="_blank"><i class="fab fa-instagram"></i></a></li>
+
+                    </ul>
 
 
-                <ul id="nav-mobile" class="sidenav">
-                    <li><a class="sidenav-close" href="#!"><i class="material-icons" style="color: black;">menu</i></a>
-                    </li>
-                    <li><a href="/" class="navItems navBarD">Home</a></li>
-                    <!-- Dropdown Trigger -->
-                    {{!-- <li><a class="dropdown-trigger black-text" href="#!" data-target="dropdown3">Film<i
-                                class="material-icons right">arrow_drop_down</i></a></li>
-                    <li><a class="dropdown-trigger black-text" href="#!" data-target="dropdown4">TV<i
-                                class="material-icons right">arrow_drop_down</i></a></li> --}}
-                    <li><a href="/contact" class="navItems navBarD">Contact</a></li>
-                    <li><a href="/privacy" class="navItems navBarD">Privacy Policy</a></li>
-                    <li><a href="#" class="navItems" target="_blank"><i class="fab fa-facebook"></i></a></li>
-                    <li><a href="#" class="navItems" target="_blank"><i class="fab fa-instagram"></i></a></li>
-                    {{!-- <li><a href="/privacidad" class="navItems"><i class="fab fa-whatsapp-square"></i></a></li>
-                    --}}
-                </ul>
-                <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-            </div>
-        </nav>
+                    <ul id="nav-mobile" class="sidenav">
+                        <li><a class="sidenav-close" href="#!"><i class="material-icons"
+                                    style="color: black;">menu</i></a>
+                        </li>
+                        <li><a href="/" class="navItems navBarD">Home</a></li>
+                        <!-- Dropdown Trigger -->
+                        {{!-- <li><a class="dropdown-trigger black-text" href="#!" data-target="dropdown3">Film<i
+                                    class="material-icons right">arrow_drop_down</i></a></li>
+                        <li><a class="dropdown-trigger black-text" href="#!" data-target="dropdown4">TV<i
+                                    class="material-icons right">arrow_drop_down</i></a></li> --}}
+                        <li><a href="/contact" class="navItems navBarD">Contact</a></li>
+                        <li><a href="/privacy" class="navItems navBarD">Privacy Policy</a></li>
+                        {{!-- <li><a href="#" class="navItems" target="_blank"><i class="fab fa-facebook"></i></a></li> --}}
+                        <li><a href="https://www.instagram.com/vilpafilms/" class="navItems" target="_blank"><i class="fab fa-instagram"></i></a></li>
+
+                    </ul>
+                    <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+                </div>
+            </nav>
+        </div>
         {{{body}}}
         <footer class="page-footer #424242 grey darken-3">
             <div class="container">
                 <div class="row">
+                    <div class="col m6 s12">
+                        <br>
+                        <h6 class="white-text navBarD">Meydan Grandstand, 6th floor, <br> Nad Al Sheba, Dubai, U.A.E. <br> <br> business@vilpafilms.com <br> +971 58 591 3901</h6>
+                        
+                    </div>
                     <div class="col m6 s12"> <br>
                         <a id="logo-container" href="/" class="brand-logo centerArt"><img src="/assets/images/logo1.png"
                                 alt="logoIdm" class="imageLogo"></a>
                     </div>
-                    <div class="col m6 s12">
-                        <h5 class="white-text navBarD">Site map</h5>
-                        <ul>
-                            <li><a href="/" class="white-text navBarD">Home</a></li>
-                            <li><a href="/contact" class="navItems navBarD white-text">Contact</a></li>
-                            <li><a href="/privacy" class="navItems navBarD white-text">Privacy Policy</a></li>
-                        </ul>
-                    </div>
+                    
                 </div>
             </div>
             <div class="footer-copyright #616161 grey darken-2">
                 <div class="container centered">
-                    Copyright © <a href="/" style="color: lightgrey;">2024 Vilpa Films - All rights reserved.</a>
+                    Copyright © <a href="/" style="color: lightgrey;">2025 Vilpa Films - All rights reserved.</a>
                 </div>
             </div>
         </footer>
