--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -50,9 +50,9 @@
                     <script src="https://player.vimeo.com/api/player.js"></script>
                 </div>
                 <div class="col s12 m6">
-                    <img class="crowsWebHome" src="/assets/images/poofWebHome.jpg" alt="All the Crows in the World">
+                    <img class="crowsWebHome" src="/assets/images/poofWebHome.jpg" alt="Poof">
                     <img class="crowsWebHome" src="/assets/images/yardBirdFooterHome.jpg"
-                        alt="All the Crows in the World">
+                        alt="Yardbird">
 
                 </div>
             </div>
