added nothing apparentely

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -51,8 +51,7 @@
                 </div>
                 <div class="col s12 m6">
                     <img class="crowsWebHome" src="/assets/images/poofWebHomeNew.jpg" alt="Poof">
-                    <img class="crowsWebHome" src="/assets/images/yardBirdFooterHome.jpg"
-                        alt="Yardbird">
+                    <img class="crowsWebHome" src="/assets/images/yardBirdFooterHome.jpg" alt="Yardbird">
 
                 </div>
             </div>
@@ -81,6 +80,7 @@
                     <script src="https://player.vimeo.com/api/player.js"></script>
                 </div>
             </div>
+           
         </div>
         <div class="container">
             <div class="row">
