--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -95,8 +95,8 @@
                 </div>
                 <div class="col s12 m4">
                     <div class="card pointer serviceCard">
-                        <div class="card-image" onclick="location.href='/popkrn';">
-                            <img src="/assets/images/popkrn.jpg">
+                        <div class="card-image" onclick="window.open('https://vilpamax.com/','_blank');" >
+                            <img src="/assets/images/vilpaMaxButton.jpg">
 
 
                         </div>
